[package]
name = "starlight-wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starlight = { path = "../starlight"}
wasm-bindgen = "0.2.74"
getrandom = { version = "0.2.3", features = ["js"] }

[lib]
crate-type = ["cdylib", "lib"]
name = "starlight-wasm"
bench = false
